Committing a fix for the hardcoded nav bar spacing issue this is currently on staging. Trying to figure out if the nav bar/menu is loading slower after these changes

--- a/style.css
+++ b/style.css
@@ -638,7 +638,7 @@ a:hover,a:active{
 		font-size:.9em
 	}
 	body:not(.mobile-or-library) .main-navigation .menu-main-nav-container>ul>li>a,body:not(.mobile-or-library) .main-navigation .menu-special-menu-container>ul>li>a{
-		padding:26px .75em;
+		padding:23px .75em;
 		letter-spacing:-.325px;
 		font-size:12px
 	}
